--- a/app/client/src/main.css
+++ b/app/client/src/main.css
@@ -1,6 +1,18 @@
-#div-clients {
-    background-color: cyan;
+.container { 
+    max-width: 95%;
 }
+.container-col h2 { 
+    text-align:center;
+}
+
+.client-div {
+    border: 1px solid;
+    border-radius: 25px;
+    padding: 15px;
+    margin-bottom: 10px;
+    background-color: lavender;
+}
+
 #rightSideAPI {
     overflow: scroll;
 }
