Many changes, see full commit message for details.
state.clients switched to dict.
UI client selection now works by mouse clicking on the client-div. HTML select gone. Client-div background-color changes when selected.
Layout infra for new action: addGasUsed. Reducer not fully implemented yet.

--- a/app/client/src/main.css
+++ b/app/client/src/main.css
@@ -10,6 +10,9 @@
     border-radius: 25px;
     padding: 15px;
     margin-bottom: 10px;
+    background-color: thistle;
+}
+.client-selected {
     background-color: lavender;
 }
 
@@ -22,9 +25,6 @@
 .mainTitle {
     width:100%;
     text-align:center;
-}
-h2.client-selected {
-    color: blue;
 }
 
 /* Message Board */ 
