ListingMini: improve how a listing appears in the listings page
- added react-image to package.json

--- a/app/client/src/main.css
+++ b/app/client/src/main.css
@@ -58,6 +58,6 @@
 
 /** See ListingMini.jsx */ 
 .listing-mini {
-    background-color: magenta;
-    width: 500px;
+    /*background-color: magenta;*/
+    max-width: 500px;
 }
