listing-view: layout improvements

--- a/app/client/src/main.css
+++ b/app/client/src/main.css
@@ -1,9 +1,6 @@
-
 .container {
     max-width: 95%;
 }
-
-/* ListingsPage */
 .grid-item {
     float: left;
     width: 200px;
@@ -11,15 +8,11 @@
     background: #e6e5e4;
     border: 2px solid #b6b5b4;
 }
-
-/*.grid-item--width2 { width: 120px; }*/
-/*.grid-item--height2 { height: 120px; }*/
-
 /** See ListingMini.jsx */
 .listing-mini {
     max-width: 500px;
     text-align:center;
 }
-.listing-mini img {
+.IPFSImage {
     border-radius: 10px;
 }
